@@ -332,6 +332,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-2645: PigSplit does not handle the case where SerializationFactory returns null (shami via gates)
+
 PIG-3109: Missing license headers (jarcec via cheolsoo)
 
 PIG-3022: TestRegisteredJarVisibility.testRegisteredJarVisibility fails with hadoop-2.0.x (rohini via cheolsoo)
